crates/hir-ty/tests/snapshots/jls_final_capture__blank_final_after_this_delegation.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    final int f;
    Final(int x) {
        f = 1;
    }
    Final() {
        this(1);
        f = 2;
    }
}

method Final(): <init>
  @9:8..9:9 'f': variable-already-assigned: Variable 'f' might already have been assigned
