crates/hir-ty/tests/snapshots/jls_final_capture__blank_final_assigned_on_both_branches.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    static final int sf;
    static {
        if ("x".length() > 0) {
            sf = 1;
        } else {
            sf = 2;
        }
    }
}
