crates/hir-ty/tests/snapshots/jls_final_capture__blank_final_field_ctor_init.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    final int f;
    Final() {
        f = 1;
    }
    Final(int x) {
        this();
    }
}
