crates/hir-ty/tests/snapshots/jls_final_capture__blank_final_local_assignment.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    void m(boolean p) {
        final int f;
        if (p) {
            f = 1;
        } else {
            f = 2;
        }
        int use = f + 1;
    }
}
