crates/hir-ty/tests/snapshots/jls_final_capture__blank_final_qualified_type_write.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    static final int sf;
    static {
        Final.sf = 1;
    }
}

static {}
  @5:14..5:16 'sf': cannot-assign-to-final-variable: Cannot assign a value to final variable 'sf'
