crates/hir-ty/tests/snapshots/jls_final_capture__blank_final_this_delegation_no_write.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    final int f;
    Final(int x) {
        f = 1;
    }
    Final() {
        this(1);
    }
}
