crates/hir-ty/tests/snapshots/jls_final_capture__blank_instance_final_ctor_after_instance_initializer.snap
---
source: crates/hir-ty/tests/jls_final_capture.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    final int f;
    {
        f = 1;
    }
    Final() {
        f = 2;
    }
}

method Final(): <init>
  @8:8..8:9 'f': variable-already-assigned: Variable 'f' might already have been assigned
